[FIX] - QR overflow

--- a/src/index.scss
+++ b/src/index.scss
@@ -93,8 +93,6 @@ body {
 body {
   margin: 0;
   padding: 0;
-  min-height: 100vh;
-  min-height: 100svh;
   font-family: "Roboto Slab", serif;
 }
 
